# Freecodecamp-projects

./: README.md
APIs and Microservices/Exercise Tracker/First Submission/: .bash_history  package.json  server.js  shrinkwrap.yaml
APIs and Microservices/File Metadata Microservice/First Submission/: .bash_history  server.js
APIs and Microservices/Request Header Parser Microservice/First Submission/: server.js
APIs and Microservices/Timestamp Microservice/First Submission/: package.json  server.js
APIs and Microservices/URL Shortener Microservice/First Submission/: server.js
Data Analysis with Python/Demographic Data Visualizer/First Submission/: demographic_data_analyzer.py  pyproject.toml
Data Analysis with Python/Mean-Variance-Standard Deviation Calculator/First Submission/: mean_var_std.py  pyproject.toml
Data Analysis with Python/Medical Data Visualizer/First Submission/: README.md  medical_data_visualizer.py  medical_examination.csv  pyproject.toml  test_module.py
Data Analysis with Python/Page View Time Series Visualizer/First Submission/: pyproject.toml  time_series_visualizer.py
Data Analysis with Python/Sea Level Predictor/First Submission/: pyproject.toml  sea_level_predictor.py
Data Visualization/Bar Chart/First Submission/: index.html  script.js  style.css
Data Visualization/Choropleth Map/First Submission/: index.html  (+2 more)
Information Security/Port Scanner/First Submission/: main.py  port_scanner.py  pyproject.toml
Responsive Web Design/Product Landing Page/: index.html  style.css
Responsive Web Design/Survey Form/: index.html  style.css
(+85 files in other folders)
