[tool.poetry]
name = "fcc-demographic-data-analyzer"
version = "0.1.0"
description = "Second assignment for the acquisition of the Data Analysis Certification from Freecodecamp."
authors = ["Quentin Mennecart <quentin.mennecart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
