[tool.poetry]
name = "fcc-mean-var-std"
version = "0.1.0"
description = "First assignment for the acquisition of the Data Analysis Certification from Freecodecamp."
authors = ["Quentin Mennecart <quentin.mennecart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
