[tool.poetry]
name = "fcc-port-scanner"
version = "0.1.0"
description = "Port scanner - Freecodecamp Python certification"
authors = ["Quentin Mennecart <quentin.mennecart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
validators = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
